objects/LLC_BI__Fee__c.object
<CustomObject>
    <description>The Fee Object is used to track details of the fees associated to a Loan (Product)</description>
    <fields>
        <fullName>Amount_Collected__c</fullName>
        <label>Amount Collected</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <formula>LLC_BI__Amount__c - Amount_Collected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Calculated_Fee_Amount__c</fullName>
        <formula>Origination_Percentage__c *  LLC_BI__Loan__r.LLC_BI__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Collected__c</fullName>
        <label>Date Collected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Paid_By__c</fullName>
        <label>Fee Paid By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Paid</fullName>
                </value>
                <value>
                    <fullName>Borrower Paid</fullName>
                </value>
                <value>
                    <fullName>Financed from Proceeds</fullName>
                </value>
                <value>
                    <fullName>Paid Outside Closing</fullName>
                </value>
                <value>
                    <fullName>Paid by Seller</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fees_Payable_To__c</fullName>
        <formula>LLC_BI__Fee_Payable_To__r.Name</formula>
        <label>Fees Payable To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Percent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Percent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Add_To_Finance_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional picklist field adds Reg. Z Finance Charge fees to APR.</description>
        <label>Add To Finance Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Add_To_MAPR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field when a fee is included in the MAPR calculation. Fees added to the finance charge are always considered MAPR fees. By default, the value is false.</description>
        <inlineHelpText>Select this field when a fee is included in the MAPR calculation.</inlineHelpText>
        <label>Add To MAPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Add_To_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional checkbox field adds fees to principal balance when charged.</description>
        <label>Add To Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Add_To_Principle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--DEPRECATED-- Deprecated field, no longer in use, replaced by Add_To_Principal__c</description>
        <label>Add To Principle - D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Collected__c</fullName>
        <label>Amount Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Paid__c</fullName>
        <description>This field is manually entered and allows the user to specify the amount that has been paid on the fee.</description>
        <inlineHelpText>The amount paid on the fee.</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Remaining__c</fullName>
        <formula>LLC_BI__Amount__c - LLC_BI__Amount_Collected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This field allows the user to specify the total amount charged for the fee. This could be preset for standard fees using fee management templates, or added as a user is applying a non standard fee.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Basis_Amount__c</fullName>
        <description>Administrators populate this field with the basis amount. The system uses this field for percentage fees calculations. By default, it is blank.</description>
        <inlineHelpText>Enter the basis amount. The system uses this field for percentage fees calculations.</inlineHelpText>
        <label>Basis Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Basis_Source__c</fullName>
        <description>Users populate this optional picklist with the basis for percentage fees, such as loan amount or another loan field. This field is used when Calculation Type is equal to percent. By default, it is blank.</description>
        <inlineHelpText>Select the basis for percentage fees, such as loan amount, total interest, or another loan field.</inlineHelpText>
        <label>Basis Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LLC_BI__Amount__c</fullName>
                    <label>Loan Amount</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Calculation_Type__c</fullName>
        <description>This optional picklist field specifies how the fee is to be computed.</description>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Flat Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collection_Method__c</fullName>
        <description>This field is a picklist that the user can manually select to specify the method of collection for the fee. The picklist can be edited to include any options that the financial institution has available to collect fees from their customers.</description>
        <label>Collection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Financed</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Subtract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_Collected__c</fullName>
        <label>Date Collected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Code__c</fullName>
        <description>This field is configured to display all internal codes that the financial institution may have for fees. This field is a picklist and is used to specify the code associated to the Fee being applied. This can be preset for standard fees using fee management templates or added as a user is applying non standard fees.</description>
        <label>Fee Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Loan_Aggregate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field links the fee to the Fee Loan Aggregate object, which rolls up data from fee to display on the fees summary tab section of the loan. This field is automatically populated.</description>
        <inlineHelpText>The object that rolls up data from fee for display on the Loan</inlineHelpText>
        <label>Fee Loan Aggregate</label>
        <referenceTo>LLC_BI__Fee_Loan_Aggregate__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Payable_To_City__c</fullName>
        <description>This is a formula field that is auto-populated with the city associated to the &quot;payable to&quot; relationship.</description>
        <formula>LLC_BI__Fee_Payable_To__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Payable To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Payable_To_State__c</fullName>
        <description>This is a formula field that is auto-populated with the state associated to the &quot;payable to&quot; relationship.</description>
        <formula>LLC_BI__Fee_Payable_To__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Payable To State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Payable_To_Street__c</fullName>
        <description>This is a formula field that is auto-populated with the street address associated to the &quot;payable to&quot; relationship.</description>
        <formula>LLC_BI__Fee_Payable_To__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Payable To Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Payable_To_Zip_Code__c</fullName>
        <description>This is a formula field that is auto-populated with the postal code associated to the &quot;payable to&quot; relationship.</description>
        <formula>LLC_BI__Fee_Payable_To__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Payable To Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Payable_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is manually entered and is used to lookup to a relationship that the fee is being paid to.</description>
        <label>Fee Payable To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Type_Description__c</fullName>
        <description>This field only appears when the fee type of &quot;other&quot; is selected. It is a free form text box that allows the user to enter in a description for the fee being applied to the loan.</description>
        <inlineHelpText>When the fee type is other this field can be used to describe it.</inlineHelpText>
        <label>Fee Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Type__c</fullName>
        <description>This field is a picklist that lets the user specify the type of fee that is being applied to the loan. This can be preset for standard fees using fee management templates, or added as a user is applying a non standard fee.</description>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Credit Report</fullName>
                </value>
                <value>
                    <fullName>DMV</fullName>
                </value>
                <value>
                    <fullName>Government Recording</fullName>
                </value>
                <value>
                    <fullName>Loan Origination</fullName>
                </value>
                <value>
                    <fullName>Settlement/Close</fullName>
                </value>
                <value>
                    <fullName>State Tax Stamps</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Title Insurance</fullName>
                </value>
                <value>
                    <fullName>Title Search</fullName>
                </value>
                <value>
                    <fullName>Consumer RE Origination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Paid_By_Borrower__c</fullName>
        <description>This checkbox is populated automatically if &quot;Borrower&quot; is selected from the &quot;Paid By&quot; picklist. This field is generally not made visible to the users and is used behind the scenes for reporting and workflow logic configuration needs.</description>
        <formula>ISPICKVAL(  LLC_BI__Paid_By__c , &apos;Borrower&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Paid By Borrower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Paid_By_Lender__c</fullName>
        <description>This checkbox is populated  automatically if  &quot;Lender&quot; is selected from the &quot;Paid By&quot; picklist. This field is generally not made visible to the users and is used behind the scenes for reporting and workflow logic configuration needs.</description>
        <formula>ISPICKVAL(LLC_BI__Paid_By__c, &apos;Lender&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Paid By Lender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Paid_By_Seller__c</fullName>
        <description>This checkbox is populated  automatically if  &quot;Seller&quot; is selected from the &quot;Paid By&quot; picklist. This field is generally not made visible to the users and is used behind the scenes for reporting and workflow logic configuration needs</description>
        <formula>ISPICKVAL(  LLC_BI__Paid_By__c  , &apos;Seller&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Paid By Seller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Paid_at_Closing__c</fullName>
        <description>This field is a checkbox that is populated automatically if &quot; At Closing&quot; is selected from the &quot;Paid at Closing&quot; picklist. This field is generally not made visible to the users and is used behind the scenes for reporting and workflow logic configuration needs.</description>
        <formula>ISPICKVAL( LLC_BI__Paid_at_Closing__c , &apos;At Closing&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Paid at Closing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if the fee is part of the standard set of fees (pre-configured using the fee management templates) for this product. This field is automatically set if the fee was selected from the standard fee list to apply to this loan.</description>
        <inlineHelpText>Determines If the fee is part of the standard set of fees for this product.</inlineHelpText>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>This field is a master detail field that is automatically populated linking the fee being applied to the particular loan it is being applied to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Paid_By__c</fullName>
        <description>This field is a picklist that allows the user to specify who is responsible for paying this fee. This value will determine if the &quot;is Paid by Seller&quot; , &quot;is Paid by Lender&quot; or &quot; is Paid by Borrower&quot; checkbox is populated. Each fee will only have 1 selection.</description>
        <label>Paid By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                    <default>true</default>
                    <label>Borrower</label>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Seller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Paid_at_Closing__c</fullName>
        <description>This field is a picklist that allows the user to specify whether the fees being applied to the loan are to be paid &quot;At Closing&quot; or &quot;Outside of Closing&quot;. This value will determine if the &quot;is Paid at Closing&quot; checkbox is populated.</description>
        <label>Paid at Closing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>At Closing</fullName>
                </value>
                <value>
                    <fullName>Outside of Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Percentage__c</fullName>
        <description>Users populate this optional field with the percentage they want the system to use to calculate the fee based on the basis value. By default, it is blank.</description>
        <inlineHelpText>Enter the percentage you want the system to use to calculate the fee based on the basis value.</inlineHelpText>
        <label>Percentage</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pricing_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system populates this field to link fees to pricing options in order to display fees with the appropriate pricing option.</description>
        <inlineHelpText>This field indicates the pricing option that should have fees assigned to it.</inlineHelpText>
        <label>Pricing Option</label>
        <referenceTo>LLC_BI__Pricing_Option__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Record_Type__c</fullName>
        <description>Users populate this optional picklist with the record type of the fee, cost, or adjustment. By default, it is blank.</description>
        <inlineHelpText>Select the record type of the fee, cost, or adjustment.</inlineHelpText>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Costs</fullName>
                </value>
                <value>
                    <fullName>Adjustments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Shoppable_Category__c</fullName>
        <description>Users or system populates this optional picklist field with if the customer can shop for the referenced service associated with fees, costs, or adjustments for a loan. By default, it is false.</description>
        <inlineHelpText>Select Cannot Shop Service if your customer cannot shop for this service. Select Shoppable Service if your customer can shop for this service.</inlineHelpText>
        <label>Shoppable Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service You Can Shop For</fullName>
                </value>
                <value>
                    <fullName>Service You Cannot Shop For</fullName>
                    <default>true</default>
                    <label>Service You Cannot Shop For</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Shopped_For__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user marks this optional boolean field to true when borrowers shop for a service for fees, costs, and adjustments rather than using the financial-institution-recommended service. By default, it is blank.</description>
        <inlineHelpText>This user-populated field displays when the customer shops for a service for fees, costs, and adjustments.</inlineHelpText>
        <label>Shopped For</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Template_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is specific to Standard Fees, and it links the Template Record that the fee was created from with the fee that is being applied to the loan.</description>
        <inlineHelpText>The Template Record that the fee was created from.</inlineHelpText>
        <label>Template Record</label>
        <referenceTo>LLC_BI__Template_Records__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Service_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system populates this optional lookup field with the third party service to which the fee relates. By default, it is blank.</description>
        <inlineHelpText>This system-populated lookup field contains the third party service to which the fee relates.</inlineHelpText>
        <label>Third Party Service Detail</label>
        <referenceTo>LLC_BI__Service_Mgmt_Detail__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origination_Percentage__c</fullName>
        <defaultValue>0.01</defaultValue>
        <inlineHelpText>If this fee is based on a percentage of the loan amount, enter the percentage here.</inlineHelpText>
        <label>Origination Percentage</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prepaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this fee recurring?</inlineHelpText>
        <label>Recurring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Amount__c</fullName>
        <label>Standard Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Use_Standard_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Standard Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Agent_Type_Description__c</fullName>
        <description>This field only should be filled in when agent type of &quot;other&quot; is selected. It is a free form text box that allows the user to enter in a description for the agent performing the service.</description>
        <inlineHelpText>This field only should be filled in when agent type of &quot;other&quot; is selected. It is a free form text box that allows the user to enter in a description for the agent performing the service.</inlineHelpText>
        <label>Agent Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Agent_Type__c</fullName>
        <description>Type of agent performing the service.</description>
        <inlineHelpText>Type of agent performing the service.</inlineHelpText>
        <label>Agent Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Independent Loan Packager</fullName>
                </value>
                <value>
                    <fullName>Referral Agent/Broker</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Accountant Preparing Financial Statements</fullName>
                </value>
                <value>
                    <fullName>Third Party Lender</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__CDC_Referral_Fee_Amount__c</fullName>
        <description>Referral fee amount CDC received from a Third Party Lender (TPL).</description>
        <inlineHelpText>Referral fee amount CDC received from a Third Party Lender (TPL).</inlineHelpText>
        <label>CDC Referral Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Fee</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>LLC_BI__Fee_Code__c</columns>
        <columns>NAME</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Template_Record__c</columns>
        <columns>LLC_BI__Fee_Type_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FEE-{000000}</displayFormat>
        <label>Fee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <recordTypes>
        <fullName>LLC_BI__Adjustments</fullName>
        <active>true</active>
        <description>Record Type for Adjustments Page Layout</description>
        <label>Adjustments</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Costs</fullName>
        <active>true</active>
        <description>Record Type for Costs Page Layout</description>
        <label>Costs</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Fees</fullName>
        <active>true</active>
        <description>Record Type for Fees Page Layout</description>
        <label>Fees</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Percentage_Fee_Required_Fields</fullName>
        <active>true</active>
        <description>When calculation type equals Percentage, Basis Source and Percentage fields are required.</description>
        <errorConditionFormula>ISPICKVAL(LLC_BI__Calculation_Type__c, &apos;Percentage&apos;) &amp;&amp; (ISPICKVAL(LLC_BI__Basis_Source__c, &apos;&apos;) || ISNULL(LLC_BI__Percentage__c))</errorConditionFormula>
        <errorMessage>Ensure values are entered for Basis Source and Percentage so the system can calculate the percentage calculation type.</errorMessage>
    </validationRules>
</CustomObject>